fix(message-scroll): Remove double overflow:auto to prevent scroll weirdness
Fixes T2357

--- a/internal_packages/message-list/stylesheets/message-list.less
+++ b/internal_packages/message-list/stylesheets/message-list.less
@@ -105,7 +105,6 @@
 
   .messages-wrap {
     flex: 1;
-    overflow-y: auto;
     opacity:0;
     transition: opacity 0s;
     background: @background-secondary;
